# olar_test_py

./: README.md  pyproject.toml
blog/: forms.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_detail.html  post_edit.html  post_list.html
mysite/: settings.py  urls.py
