[project]
name = "djangogirls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
]


[tool.ruff]
fix = true
show-fixes = true

[tool.pyright]
# caminho onde o Pyright busca stubs adicionais
stubPath = "typings"

[tool.django-stubs]
django_settings_module = "mysite.settings"

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
]
